--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -14,9 +18,29 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@convex/*": ["./convex/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@convex/*": [
+        "./convex/*"
+      ],
+      "@djpanda/convex-authz": [
+        "../src/client/index.ts"
+      ],
+      "@djpanda/convex-authz/react": [
+        "../src/react/index.ts"
+      ],
+      "@djpanda/convex-authz/test": [
+        "../src/test.ts"
+      ],
+      "@djpanda/convex-authz/convex.config.js": [
+        "../src/component/convex.config.ts"
+      ]
     }
   },
-  "include": ["./src", "./convex", "vite.config.ts"]
+  "include": [
+    "./src",
+    "./convex",
+    "vite.config.ts"
+  ]
 }
